--- a/src/main/resources/templates/cadastrarOrcamento.html
+++ b/src/main/resources/templates/cadastrarOrcamento.html
@@ -1,148 +1,163 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-   xmlns:th="http://www.thymeleaf.org"
-   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-   layout:decorate="~{template/layoutPadrao}">
-   
-<head>
-   <title>Oficina</title>
-</head>
-   
-<section layout:fragment="conteudo">
-   <form class="form-horizontal" method="POST" th:action="@{/orcamento}" th:object="${orcamento}">
-   
-      <div class="alert alert-success" th:if="${!#strings.isEmpty(mensagem)}">
-         <span th:text="${mensagem}">Orçamento gerado com sucesso!!!</span>
-      </div>
-      
-      <div class="card">
-         <div class="card-header">
-            <div class="clearfix">
-               <h5 class="card-title aw-titulo-panel">Novo Orçamento</h5>
-               <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 
-                  link-underline-opacity-75-hover" th:href="@{/index}">
-               Voltar para listagem
-               </a>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{template/layoutPadrao}">
+    <head>
+        <title>Oficina</title>
+    </head>
+
+    <section layout:fragment="conteudo">
+        <form class="form-horizontal" method="POST" th:action="@{/orcamento}" th:object="${orcamento}">
+            <div class="alert alert-success" th:if="${!#strings.isEmpty(mensagem)}">
+                <span th:text="${mensagem}">Orçamento gerado com sucesso!!!</span>
             </div>
-         </div>
-         
-         <div class="container-lg">
-            <div class="panel-body">
-               <div class="col-sm-8 row">
-                  <label for="numOrcamento" class="col-md-2 col-form-label">Orçamento nº</label>
-                  <div class="col-sm-3"> 
-                     <input type="text"  id="numOrcamento" disabled="true"  th:text="${orcamento.numOrcamento}"/>
-                  </div>
-              
-                  <label for="dataEmissao" class="col-md-2 col-form-label">Data emissão</label>
-                  <div class="col-sm-3"> 
-                     <input type="text"  id="dataEmissao" disabled="true"  th:text="${orcamento.dataEmissao}"/>
-                  </div>
-              </div>
-              
-               <div class="col-md-8 row">
-                  <label for="validoAte" class="col-md-2 col-form-label">Valido até</label>
-                  <div class="col-sm-3"> 
-                     <input type="text"  id="validoAte" disabled="true"  th:text="${orcamento.validoAte}"/>
-                  </div>
-             
-                  <label for="mecanico" class="col-md-2 col-form-label">Mecânico</label>
-                  <div class="col-sm-3"> 
-                     <input type="text"  id="mecanico"  disabled="true"  th:text="${orcamento.mecanico}"/>
-                  </div>
-               </div>
-               
-               <div class="col-md-8 row mb-3">
-                  <label for="nome" class="col-md-2 col-form-label">Cliente</label>
-                  <div class="col-sm-3"> 
-                     <input type="text" class="form-control" id="nome" th:field="*{nome}"/>
-                  </div>
-               </div>
-               
-                <div class="col-md-8 row mb-3">
-                  <label for="email" class="col-md-2 col-form-label">Email</label>
-                  <div class="col-sm-3"> 
-                     <input type="text" class="form-control" id="email" th:field="*{email}"/>
-                  </div>
-                
-                  <label for="telefone" class="col-md-2 col-form-label">Telefone</label>
-                  <div class="col-sm-3"> 
-                     <input type="text" class="form-control" id="telefone" th:field="*{telefone}"/>
-                  </div>
-               </div>
-               
-               <div class="col-md-8 row mb-3">
-                  <label for="endereco" class="col-md-2 col-form-label">Endereco</label>
-                  <div class="col-sm-3"> 
-                     <input type="text" class="form-control" id="endereco" th:field="*{endereco}"/>
-                  </div>
-                
-                  <label for="cidade" class="col-md-2 col-form-label">Cidade</label>
-                  <div class="col-sm-3"> 
-                     <input type="text" class="form-control" id="cidade" th:field="*{cidade}"/>
-                  </div>
-               </div>
-               
-                <div class="col-md-8 row mb-3">
-                  <label for="estado" class="col-md-2 col-form-label">Estado</label>
-                  <div class="col-sm-3"> 
-                     <input type="text" class="form-control" id="estado" th:field="*{estado}"/>
-                  </div>
-               
-                  <label for="placa" class="col-md-2 col-form-label">Placa do Veículo</label>
-                  <div class="col-sm-3"> 
-                     <input type="text" class="form-control" id="placa" th:field="*{placa}"/>
-                  </div>
-               </div>
-               
-               <div class="col-md-8 row mb-3">
-                  <label for="marca" class="col-sm-2 control-label mb-3">Marca</label>
-					  <div class="col-sm-2">
-						<select class="form-control js-preenche-combo-modelo-por-marca" id="marcas">
-		   					<option th:each="option : ${listaMarcas}" th:value="${option.id}" th:text="${option.nome}"></option>	
-						</select>
-				   </div>
-               </div>
-               
-               <div class="col-md-8 row mb-3">
-               		<label for="modelo" class="col-sm-2 control-label mb-3">Modelo</label>
-						<div class="col-sm-2">
-							<select class="form-control" id="modelos"  disabled="true">
-								<option th:each="option : ${listaModelos}" th:value="${option.id}" th:text="${option.nome}"></option>
-							</select>
-						</div>
-               
-                  <label for="ano" class="col-md-2 col-form-label">Ano</label>
-                  <div class="col-sm-3"> 
-                     <input type="text" class="form-control" id="ano" th:field="*{ano}"/>
-                  </div>
-               </div>
-              
-               <div class="col-md-8 row mb-3">
-                  <label for="observacao" class="col-md-2 col-form-label">Observações</label>
-                  <div class="col-sm-8"> 
-                     <textarea class="form-control" th:field="*{observacao}"></textarea>
-                  </div>
-               </div>
-              </div>
-         </div>  
-             
-        <div th:replace="tabelaOrcamento"></div>
-        
-         <div class="container-lg">
-            <div class="panel-body">     
-               <div class="col-md-12 row mb-3">
-					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-primary btn-sm btn-lg">Gerar pdf</button>
-						<button type="button" class="btn btn-primary btn-sm btn-lg">Enviar por WhatsApp</button>
-					</div>
-					
-				</div>
-			</div>
-		</div>		
-				
-         
-      </div>
-   </form>
-   </section>
+            
+            <div class="alert alert-primary" role="alert">
+    			Campos marcados com * são obrigatórios!
+    		</div>
+
+            <div class="card">
+                <div class="card-header">
+                    <div class="clearfix">
+                        <h5 class="card-title aw-titulo-panel">Novo Orçamento</h5>
+                        <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" th:href="@{/}">
+                            Voltar para listagem
+                        </a>
+                    </div>
+                </div>
+
+                <div class="container-lg">
+                    <div class="panel-body">
+                        <div class="col-sm-8 row">
+                            <label for="numOrcamento" class="col-md-2 col-form-label">Orçamento nº</label>
+                            <div class="col-sm-3">
+                                <p id="numOrcamento" th:utext="${orcamento.numOrcamento}"></p>
+                                <input type="hidden" th:field="*{numOrcamento}"/>
+                            </div>
+
+                            <label for="dataEmissao" class="col-md-2 col-form-label">Data emissão</label>
+                            <div class="col-sm-3">
+                                <p id="dataEmissao" th:utext="${#dates.format(dataEmissao,'dd/MM/yyyy')}"></p>
+                                <input type="hidden" th:field="*{dataEmissao}"/>
+                            </div>
+                        </div>
+
+                        <div class="col-md-8 row">
+                            <label for="validoAte" class="col-md-2 col-form-label">Valido até</label>
+                            <div class="col-sm-3">
+                                <p id="validoAte" th:utext="${#dates.format(dataEmissao,'dd/MM/yyyy')}"></p>
+                                <input type="hidden" th:field="*{dataEmissao}"/>
+                            </div>
+
+                            <label for="mecanico" class="col-md-2 col-form-label">Mecânico</label>
+                            <div class="col-sm-3">
+                            	 <p id="mecanico" th:utext="${mecanico}"></p>
+                            	<input type="hidden" th:field="*{mecanico}"/>
+                            </div>
+                        </div>
+
+                        <div class="col-md-8 row mb-3">
+                            <label for="nome" class="col-md-2 col-form-label">Cliente*</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="nome" th:field="*{nome}" />
+                            </div>
+                        </div>
+
+                        <div class="col-md-8 row mb-3">
+                            <label for="email" class="col-md-2 col-form-label">Email</label>
+                            <div class="col-sm-3">
+                                <input type="text" class="form-control" id="email" th:field="*{email}" />
+                            </div>
+
+                            <label for="telefone" class="col-md-2 col-form-label">Telefone</label>
+                            <div class="col-sm-3">
+                                <input type="text" class="form-control" id="telefone" th:field="*{telefone}" />
+                            </div>
+                        </div>
+
+                        <div class="col-md-8 row mb-3">
+                            <label for="endereco" class="col-md-2 col-form-label">Endereco/N.º</label>
+                            <div class="col-sm-3">
+                                <input type="text" class="form-control" id="endereco" th:field="*{endereco}" />
+                            </div>
+
+                            <label for="cidade" class="col-md-2 col-form-label">Cidade</label>
+                            <div class="col-sm-3">
+                                <input type="text" class="form-control" id="cidade" th:field="*{cidade}" />
+                            </div>
+                        </div>
+
+                        <div class="col-md-8 row mb-3">
+                            <label for="estado" class="col-md-2 col-form-label">Estado</label>
+                            <div class="col-sm-3">
+                                <input type="text" class="form-control" id="estado" th:field="*{estado}" />
+                            </div>
+
+                            <label for="placa" class="col-md-2 col-form-label">Placa do Veículo</label>
+                            <div class="col-sm-3">
+                                <input type="text" class="form-control" id="placa" th:field="*{placa}"/>
+                            </div>
+                        </div>
+
+                        <div class="col-md-8 row mb-3">
+                            <label for="marcas" class="col-sm-2 control-label mb-3">Carro Marca*</label>
+                            <div class="col-sm-2">
+                                <select class="form-control js-preenche-combo-modelo-por-marca" id="marcas" th:field="*{marca}">
+                                    <option th:each="option : ${listaMarcas}" th:value="${option.id}" th:text="${option.nome}"></option>
+                                </select>
+                            </div>
+                             <label for="ano" class="col-md-2 col-form-label">Ano</label>
+                            <div class="col-sm-3">
+                                <input type="text" class="form-control" id="ano" th:field="*{ano}" />
+                            </div>
+                        </div>
+
+                        <div class="col-md-8 row mb-3">
+                            <label for="modelos" class="col-sm-2 control-label mb-3">Modelo*</label>
+                            <div class="col-sm-2">
+                            	
+                                <select class="form-control" id="modelos"  th:field="*{modelo}" disabled="true">
+                                	<input type="hidden" th:field="*{modelo}"/>
+                                    <option th:each="option : ${listaModelos}" th:value="${option.id}" th:text="${option.nome}"></option>
+                                </select>
+                            </div>
+
+                            <label for="cor" class="col-md-2 col-form-label">Cor</label>
+                            <div class="col-sm-3">
+                                <input type="text" class="form-control" id="cor" th:field="*{cor}" />
+                            </div>
+                        </div>
+
+                        <div class="col-md-8 row mb-3">
+                            <label for="observacao" class="col-md-2 col-form-label">Observações</label>
+                            <div class="col-sm-8">
+                                <textarea class="form-control" th:field="*{observacao}"></textarea>
+                            </div>
+                        </div>
+                        
+                        <div class="col-sm-8 row mb-3">
+                        	<i class="bi bi-info-circle">
+                      		<span>Preencha o preço unitário com ponto ao invés de virgula!</span>
+                      		</i>
+                 		</div>
+                    </div>
+                </div>
+				 
+                <div th:replace="tabelaOrcamento"></div>
+                <div th:replace="tabelaTeste"></div>
+
+                <div class="container-lg">
+                    <div class="panel-body">
+                        <div class="col-md-12 row mb-3">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="button" class="btn btn-secondary">Cancelar</button>
+                                <button type="submit" class="btn btn-success">Gerar pdf</button>
+                                <button type="submit" class="btn btn-success">Enviar por WhatsApp
+									<i class="bi bi-whatsapp"></i>
+								</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </section>
 </html>
