--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,79 +1,62 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" media="screen,projection" />
 
-<head>
-	<!--Import Google Icon Font-->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<!-- Compiled and minified CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-		media="screen,projection">
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8" />
+        <title>Oficina</title>
+    </head>
 
-	<!--Let browser know website is optimized for mobile-->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta charset="UTF-8">
-	<title>Oficina</title>
-</head>
+    <body>
+        <div class="container">
+            <div class="row"></div>
+            <div class="row">
+                <div class="center-align">
+                    <div class="col s12 alinhar-central">
+                        <p class="fw-bolder"><b><big>Oficina Mecânica Leonildo</big></b></p>
+                    </div>
+                </div>
 
-<body>
-	
-	<div class="container">
-		<div class="row"></div>
-		<div class="row">
-		
-			<div class="row justify-content-center">
-				<div class="col-auto">
-					
-					<p class="fw-bolder">Oficina Mecânica Leonildo</p>
-				</div>	
-			</div>
-			
-			<div class="card col s12 m6 offset-m3">
-				<div class="card-stacked">
-					<div class="card-content">
-						<p th:if="${param.error}" class="red-text">Usuário ou senha
-							inválidos.</p>
-						<p th:if="${param.logout}" class="red-text">Você foi deslogado
-							com sucesso.</p>
-						<form th:action="@{/login}" method="post">
+                <div class="card col s12 m6 offset-m3">
+                    <div class="card-stacked">
+                        <div class="card-content">
+                            <p th:if="${param.error}" class="red-text">Usuário ou senha inválidos.</p>
+                            <p th:if="${param.logout}" class="red-text">Você foi deslogado com sucesso.</p>
+                            
+                            <form th:action="@{/login}" method="post">
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <i class="material-icons prefix">account_circle</i>
+                                        <input class="validate" type="text" name="username" id="username" />
+                                        <label for="username">Email:</label>
+                                    </div>
 
-							<div class="row">
-								<div class="input-field col s12">
-									<i class="material-icons prefix">account_circle</i>
-									<input class="validate" type="text" name="username" id="username">
-									<label for="username">Email:</label>
-								</div>
-
-								<div class="input-field col s12">
-									<i class="material-icons prefix">lock</i>
-									<input class="validate" type="password" name="password" id="password">
-									<label for="password">Senha:</label>
-								</div>
-								<div class="input-field col s12">
-									<button class="waves-effect waves-light btn col s12" type="submit">Login</button>
-								</div>
-								<div class="center input-field col s12">
-									<a th:href="@{/esqueciSenha}">Esqueceu a senha ?</a>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Compiled and minified JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function () {
-			$('.sidenav').sidenav();
-		});
-		$(document).ready(function () {
-			$('select').formSelect();
-		});
-	</script>
-
-</body>
-
+                                    <div class="input-field col s12">
+                                        <i class="material-icons prefix">lock</i>
+                                        <input class="validate" type="password" name="password" id="password" />
+                                        <label for="password">Senha:</label>
+                                    </div>
+                                    <div class="input-field col s12">
+                                        <button class="waves-effect waves-light btn col s12" type="submit">Login</button>
+                                    </div>
+                                    <div class="center input-field col s12">
+                                        <a th:href="@{/usuarios/form}">Esqueceu a senha ?</a>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+       
+    </body>
 </html>
