--- a/src/main/resources/templates/pesquisarCliente.html
+++ b/src/main/resources/templates/pesquisarCliente.html
@@ -14,7 +14,7 @@
     		<div class="clearfix">
     			<h5 class="card-title aw-titulo-panel">Pesquisar Cliente por nome</h5>
     			<a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 
-	  							link-underline-opacity-75-hover" href="site/index">
+	  							link-underline-opacity-75-hover"  th:href="@{/}">
   							Voltar para listagem
 				</a>
     		</div>
@@ -49,7 +49,7 @@
 				</thead>
 				<tbody>
 					<tr th:if="${listaClientes.empty}">
-						<td colspan="2">Não há clientes</td>
+						<td colspan="3">Não há clientes</td>
 					</tr>
 					<tr th:each="cliente: ${listaClientes}">
 						<td class="text-center"/>
@@ -72,7 +72,9 @@
 				</tbody>
 			</table>
 			
-			<div th:replace="paginacao.html"></div>
+			<div th:if="${!listaClientes.empty}">
+				<div th:replace="template/paginacao"></div>
+			</div>
 			
 		</div>
 		<div th:replace="dialogConfirmacaoExclusaoCliente"></div>
