--- a/src/main/resources/templates/pesquisarOrcamento.html
+++ b/src/main/resources/templates/pesquisarOrcamento.html
@@ -14,9 +14,9 @@
 	<div class="card">
 		<div class="card-header">
 			<div class="clearfix">
-				<h5 class="card-title aw-titulo-panel">Pesquisa de Orçamentos</h5> 
+				<h5 class="card-title aw-titulo-panel">Pesquisa de Orçamento</h5> 
 				<a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 
-	  							link-underline-opacity-75-hover" href="site/index">
+	  							link-underline-opacity-75-hover"  th:href="@{/}">
   							Voltar para listagem
 				</a>
 			</div>
@@ -61,7 +61,9 @@
 				</tbody>
 				
 			</table>
-			<div th:replace="paginacao.html"></div>
+			<div th:if="${!listaOrcamentos.empty}">
+				<div th:replace="template/paginacao"></div>
+			</div>
 			
 		</div>
 	</div>
