--- a/src/main/resources/templates/site/esqueciSenha.html
+++ b/src/main/resources/templates/site/esqueciSenha.html
@@ -1,87 +1,76 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" media="screen,projection" />
 
-<head>
-	<!--Import Google Icon Font-->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<!-- Compiled and minified CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-		media="screen,projection">
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8" />
+        <title>Oficina</title>
+    </head>
 
-	<!--Let browser know website is optimized for mobile-->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta charset="UTF-8">
-	<title>Oficina</title>
-</head>
+    <body>
+        <div class="container">
+            <div class="row"></div>
+            <div class="row">
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+                        <p class="fw-bolder">Oficina Mecânica Leonildo</p>
+                    </div>
+                </div>
 
-<body>
-
-	<div class="container">
-		<div class="row"></div>
-		<div class="row">
-			
-			<div class="row justify-content-center">
-				<div class="col-auto">
-					
-					<p class="fw-bolder">Oficina Mecânica Leonildo</p>
-				</div>	
-			</div>
-		
-			<div class="card col s12 m6 offset-m3">
-
-				<div class="card-stacked">
-					<div class="card-content">
-
-						<form th:action="@{/usuarios}" method="post">
-
-							<div class="row">
-								<div class="input-field col s12">
-									<i class="material-icons prefix">account_circle</i>
-									<input class="validate" type="text" name="nome" id="nome">
-									<label for="username">Nome:</label>
-								</div>
-								<div class="input-field col s12">
-									<i class="material-icons prefix">account_circle</i>
-									<input class="validate" type="text" name="email" id="email">
-									<label for="username">Email:</label>
-								</div>
-								<div class="input-field col s12">
-									<i class="material-icons prefix">account_circle</i>
-									<input class="validate" type="text" name="cpf" id="cpf">
-									<label for="username">Senha:</label>
-								</div>
-								<div class="input-field col s12">
-									<i class="material-icons prefix">lock</i>
-									<input class="validate" type="password" name="senha" id="senha">
-									<label for="password">Repetir senha:</label>
-								</div>
-								<div class="input-field col s6">
-									<button class="waves-effect waves-light btn col s12" type="submit">Enviar</button>
-								</div>
-								<div class="input-field col s6">
-									<button class="waves-effect waves-light btn col s12" href="/login">Cancelar</button>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Compiled and minified JavaScript -->
-	<!-- Compiled and minified JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function () {
-			$('.sidenav').sidenav();
-		});
-		$(document).ready(function () {
-			$('select').formSelect();
-		});
-	</script>
-
-</body>
-
+                <div class="card col s12 m6 offset-m3">
+                    <div class="card-stacked">
+                        <div class="card-content">
+                            <form th:action="@{/usuarios}" method="post">
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <i class="material-icons prefix">account_circle</i>
+                                        <input class="validate" type="text" name="nome" id="nome" />
+                                        <label for="nome">Nome:</label>
+                                    </div>
+                                    <div class="input-field col s12">
+                                        <i class="material-icons prefix">account_circle</i>
+                                        <input class="validate" type="email" name="email" id="email" />
+                                        <label for="email">Email:</label>
+                                    </div>
+                                    <div class="input-field col s12">
+                                        <i class="material-icons prefix">account_circle</i>
+                                        <input class="validate" type="password" name="senha" id="senha" />
+                                        <label for="senha">Nova Senha:</label>
+                                    </div>
+                                    <div class="input-field col s12">
+                                        <i class="material-icons prefix">lock</i>
+                                        <input class="validate" type="password" name="repetirSenha" id="repetirSenha" />
+                                        <label for="repetirSenha">Repetir senha:</label>
+                                    </div>
+                                    <div class="input-field col s6">
+                                        <button class="waves-effect waves-light btn col s12" type="submit">Salvar</button>
+                                    </div>
+                                    <div class="input-field col s6">
+                                        <button class="waves-effect waves-light btn col s12" th:href="@{/login}">Cancelar</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Compiled and minified JavaScript -->
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $(".sidenav").sidenav();
+            });
+            $(document).ready(function () {
+                $("select").formSelect();
+            });
+        </script>
+    </body>
 </html>
