--- a/src/main/resources/templates/tabelaOrcamento.html
+++ b/src/main/resources/templates/tabelaOrcamento.html
@@ -6,10 +6,9 @@
 	<body>
 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 	</body>
-	
  	<div class="text-center">
  		<div class="container">
-	        <table id="minhaTabela">
+	        <table id="tabelaItens">
 				  <thead>
 				    <tr>
 				      <th>Produto</th>
@@ -22,71 +21,74 @@
 				  <tbody>
 				    <tr>
 				      <td>1</td>
-				      <td><input type="text" class="descricao"></td>
-				      <td><input type="number" class="quantidade" value=""></td>
-				      <td><input type="number" class="preco" value="00.00" step="0.01"></td>
+				      <td><input type="text" class="form-control descricao" ></td>
+				      <td><input type="number" class="form-control quantidade"  value=""></td>
+				      <td><input type="number" class="form-control preco"  value="" step="0.01"></td>
 				      <td><span class="subtotal"> 00.00</span></td>
 				    </tr>
 				    <tr>
 				      <td>2</td>
-				      <td><input type="text" class="descricao"></td>
-				      <td><input type="number" class="quantidade" value=""></td>
-				      <td><input type="number" class="preco" value="00.00" step="0.01"></td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
 				      <td><span class="subtotal"> 00.00</span></td>
 				    </tr> 
 				    <tr>
 				      <td>3</td>
-				      <td><input type="text" class="descricao"></td>
-				      <td><input type="number" class="quantidade" value=""></td>
-				      <td><input type="number" class="preco" value="00.00" step="0.01"></td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
 				      <td><span class="subtotal"> 00.00</span></td>
 				    </tr>
 				     <tr>
 				      <td>4</td>
-				      <td><input type="text" class="descricao"></td>
-				      <td><input type="number" class="quantidade" value=""></td>
-				      <td><input type="number" class="preco" value="00.00" step="0.01"></td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
 				      <td><span class="subtotal"> 00.00</span></td>
 				    </tr>
 				     <tr>
 				      <td>5</td>
-				      <td><input type="text" class="descricao"></td>
-				      <td><input type="number" class="quantidade" value=""></td>
-				      <td><input type="number" class="preco" value="00.00" step="0.01"></td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
 				      <td><span class="subtotal"> 00.00</span></td>
 				    </tr>
 				     <tr>
 				      <td>6</td>
-				      <td><input type="text" class="descricao"></td>
-				      <td><input type="number" class="quantidade" value=""></td>
-				      <td><input type="number" class="preco" value="00.00" step="0.01"></td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
 				      <td><span class="subtotal"> 00.00</span></td>
 				    </tr> 
 				    <tr>
 				      <td>7</td>
-				      <td><input type="text" class="descricao"></td>
-				      <td><input type="number" class="quantidade" value=""></td>
-				      <td><input type="number" class="preco" value="00.00" step="0.01"></td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
 				      <td><span class="subtotal"> 00.00</span></td>
 				    </tr>
 				     <tr>
 				      <td>8</td>
-				      <td><input type="text" class="descricao"></td>
-				      <td><input type="number" class="quantidade" value=""></td>
-				      <td><input type="number" class="preco" value="00.00" step="0.01"></td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
 				      <td><span class="subtotal"> 00.00</span></td>
 				    </tr>
 				  </tbody>
 			</table>
-			<div>
-			  Total Geral: <span id="totalGeral"> 00.00</span>
-			</div>
+			
 		</div>	
-   </div>
+		<div class="container">
+			<div class="alinhar-a-direita">
+			  <div><b>Total Geral: </b><span id="totalGeral"> 00.00</span></div>
+			</div>
+		</div>
+   </div> 
 <script>
 		function atualizarTotais() {
 		  // Pegar todas as linhas da tabela
-		  const linhas = document.querySelectorAll('#minhaTabela tbody tr');
+		  const linhas = document.querySelectorAll('#tabelaItens tbody tr');
 		  let totalGeral = 0;
 		
 		  // Percorrer cada linha
